# cg-opengl

./: .gitmodules  CMakeLists.txt  README.md
include/core/: Application.h  FPSCounter.h  Window.h
include/input/: Camera.h  Input.h
include/physics/: Physics.h
include/render/: Grid.h  Material.h  Mesh.h  Model.h  ModelLoader.h  Renderer.h  Shader.h  Skybox.h
include/ui/: DebugUI.h
models/: structure_v5.mtl  structure_v6.mtl
src/: main.cpp
src/core/: Application.cpp  FPSCounter.cpp  Window.cpp
src/input/: Camera.cpp  Input.cpp
src/physics/: Physics.cpp
src/render/: Grid.cpp  Material.cpp  Mesh.cpp  Model.cpp  ModelLoader.cpp  Renderer.cpp  Shader.cpp  Skybox.cpp
src/ui/: DebugUI.cpp
